# agentops-mcp-server

./: Dockerfile  README.md  pyproject.toml
src/mcp_server_agentops_api/: __init__.py  __main__.py  client.py  server.py  tools.py
